
* LUCENE-10635: Ensure test coverage for WANDScorer by using a test query. (Zach Chen, Adrien Grand)

* GITHUB#11752: Added interface to relate a LatLonShape with another shape represented as Component2D. (Navneet Verma)

Build
---------------------

* GITHUB#11886: Upgrade to gradle 7.5.1 (Dawid Weiss)

======================== Lucene 9.4.2 =======================

Bug Fixes
---------------------
* GITHUB#11905: Fix integer overflow when seeking the vector index for connections in a single segment.
 This addresses a bug that was introduced in 9.2.0 where having many vectors is not handled well
 in the vector connections reader.

======================== Lucene 9.4.1 =======================

Bug Fixes
---------------------
* GITHUB#11858: Fix kNN vectors format validation on large segments. This
 addresses a regression in 9.4.0 where validation could fail, preventing
 further writes or searches on the index. (Julie Tibshirani)

======================== Lucene 9.4.0 =======================

API Changes
---------------------
* LUCENE-10577: Add VectorEncoding to enable byte-encoded HNSW vectors (Michael Sokolov, Julie Tibshirani)

New Features
---------------------
* LUCENE-10654: Add new ShapeDocValuesField for LatLonShape and XYShape. (Nick Knize)

* LUCENE-10629: Support match set filtering with a query in MatchingFacetSetCounts. (Stefan Vodita, Shai Erera)

* LUCENE-10633: SortField#setOptimizeSortWithIndexedData and
  SortField#getOptimizeSortWithIndexedData were introduced to provide
  an option to disable sort optimization for various sort fields. (Mayya Sharipova)

* GITHUB#912: Support for Java 19 foreign memory support was added. Applications started
  with command line parameter "java --enable-preview" will automatically use the new
  foreign memory API of Java 19 to access indexes on disk with MMapDirectory. This is
  an opt-in feature and requires explicit Java command line flag! When enabled, Lucene logs